fix: home hero spacing

--- a/app/assets/stylesheets/components/_hero.scss
+++ b/app/assets/stylesheets/components/_hero.scss
@@ -40,9 +40,15 @@
     width: 60%;
   }
 
+  .hero__title {
+    margin-bottom: rem-calc(15);
+  }
+
   .hero__subtitle {
     font-size: rem-calc(21);
     font-weight: $bold;
+    margin-top: 0;
+    margin-bottom: rem-calc(40);
   }
 
   .hero__button {
