--- a/app/assets/stylesheets/components/_list.scss
+++ b/app/assets/stylesheets/components/_list.scss
@@ -106,7 +106,7 @@
 //--------------------------------------------------
 .list--hero-logos {
   @include list-site-logos;
-  margin-top: rem-calc(40);
+  margin-top: rem-calc(50);
 
   .list__li {
     margin-right: rem-calc(40);
